# bac

./: .cursorrules  .dockerignore  .env  .env.example  .envrc  .gitignore  .gitmodules  AGENTS.md  AGENT_TASKS.md  AI_RULES.md  ANIM.md  ANIM_PLAN.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENHANCEMENT-PLAN-2026.md  IDEAs.md  Makefile  PROGRESS.md  PROJECT-STATUS.md  README.md  TOOLS-RESEARCH-2026.md  bac  bac.md  bac.nu  bac.sh  claude_sess.txt  fly.toml  justfile  mise.toml  nushell.ts  ocr-bac.sh  ocr-parallel.nu  ocr-parallel.sh  package.json  plan.md  podman-compose.yaml  progress.md  (+13 more)
.config/: wt.toml
.dmux/: dmux.config.json
.github/workflows/: bac-study.yml
.kiro/agents/: test.json
.kiro/scripts/: kiloclaw-vault.sh  sync-vault.sh
.kiro/settings/: lsp.json
.opencode/: BLOCKED_TASKS.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md
.opencode/commands/: proj_status.md
.opencode/plans/: ecosystem_implementation_plan.md  integration_specs.md  project_analysis.md
.playwright-cli/: page-2026-02-26T07-40-31-267Z.yml  page-2026-02-27T17-36-44-850Z.yml  page-2026-02-27T17-37-47-969Z.yml  page-2026-02-27T17-38-08-159Z.yml  page-2026-02-27T18-16-33-430Z.yml
.specify/memory/: constitution.md
.tmp/external-context/: .manifest.json
config/: aichat.yaml  database.yaml  docker-compose.yml  fluvio-topics.yaml  notebooks.yaml  storage.yaml  yc_key.json
config/aichat/: config.yaml  rag-template.txt
config/deploy/: fly-messaging.toml  fly.toml
crates/api/: Cargo.toml  Dockerfile
crates/ocr/: Cargo.toml
crates/ocr/src/: lib.rs  main.rs
crates/test/: Cargo.toml  README.md
daemons/: audio-daemon.nu  kb-watcher.nu  nlm-research-daemon.nu  webcrawler-daemon.nu  youtube-daemon.nu
db/pdfs/: 7c_bac_pc_كامل.html  7c_bac_pc_كامل_ind.html  7c_bac_pc_كاملs.html
deploy/: CLOUD_SHELL.md  DEPLOYMENT.md  DOPPLER.md  docker-compose.yml  env.template  zeroclaw-service.yml  zeroclaw.service
deploy/cloud-shell/: FREE_TIER.md  bac-free-tier.sh  bac.sh  setup.sh
deploy/cloudflare/: wrangler.toml
deploy/fly/: api.toml  fly-messaging.toml  fly.toml  ocr.toml  streaming.toml
deploy/openclaw/: Dockerfile  INTEGRATION.md  README.md  openclaw.json
deploy/opencrust/: README.md  config.toml
deploy/render/: .env.example  DEPLOY.md  render.yaml
deploy/vault-api/: package.json
doc/: AI_RULES.md  INTEGRATIONS.md  OPEN_SOURCE_PROJECTS.md  animation-system-deps.md
doc/PLAN/: STRATEGIC_PLAN.md
doc/rfc/: CONTENT_PROCESSING_PIPELINE.md  FILE_BUNDLING_SYSTEM.md  RESOURCE_SEARCH_SYSTEM.md  SEARCH_INFRASTRUCTURE.md
docs/: API.md  ARCHITECTURE.md  COMPLETE-SYSTEM.md  DEVELOPER.md  LIMITATIONS.md  LONG_TERM_GOAL.md  PROVIDERS.md  README.md  ROADMAP.md  TOOLS.md  TROUBLESHOOTING.md  ocr-api-keys-setup.md  ocr-chain-benchmarks.md  rag-pipeline.md  zeroclaw-integration-summary.md  zeroclaw-integration.md
docs/services/: messaging.md
domain_data/: faq.md  guide.md  reference.md
k8s/base/: autoscaling.yaml  config.yaml  deployments.yaml  kustomization.yaml  services.yaml
k8s/chart/: Chart.yaml  values.yaml
k8s/monitoring/: alert-rules.yaml  prometheus.yaml  (+3 more)
lib/: bac.nu  kb_opt.nu  nlm_sync.nu  solve.nu
monitoring/: logging.yml  prometheus.yml
scripts/: bac-agent-build.sh  bac-agent-daemon.sh  bac-agent-send.sh  bac-agent-setup.sh  bac-aliases.sh  bac-automation.sh  bac-nu.nu  bac-nu.nu.toml  bac-telegram-bot.py  bac-web.html  benchmark_kb.py  cloud-shell-ocr.sh  cloudflared-tunnel.sh  manifest.json  ocr-config.example.toml  ocr_providers.py  pdfs.nu  process-standalone-images.sh  process_kb.py  process_pdfs.nu  requirements.txt  setup-termux.sh  start-services.sh  stop-services.sh  sw.js  sync-obsidian.js  zen-open.sh
sql/: aichat_tools.sql  knowledge_base.sql  query.sql  schema_timeseries.sql
src/: .env  conference_worker.ts
src/api/: Cargo.toml  Dockerfile  docker-compose.test.yaml  go.mod  go.sum  main.go  podman-compose.test.min.yaml  podman-compose.test.yaml  sqlc.yaml  test-podman.sh
src/api/cmd/: main.go  main.go.backup
src/api/docs/: docs.go  swagger.json  swagger.yaml
src/api/internal/handlers/: health_test.go  main.go
src/api/internal/messaging/: handlers.go
src/api/internal/middleware/: ratelimit.go
src/api/internal/services/: animation.go  auth.go  db.go  db_enhanced.go  prediction.go  solver.go  submission.go
src/api/sql/: queries.sql
src/api/sql/db/: models.go  queries.sql.go
src/api/sql/migrations/: 001_initial.sql
src/api/src/: client.rs  lib.rs  proxy.rs
src/api/src/models/: problem.rs  solution.rs  user.rs
src/api/src/routes/: auth.rs  mod.rs  problems.rs  solutions.rs  users.rs
src/gateway/: Cargo.toml
src/gateway/src/: main.rs
src/gateway/src/animation/: mod.rs
src/gateway/src/rag/: mod.rs
src/gemini-tools/: Cargo.toml
src/gemini-tools/src/: client.rs  correct.rs  embed.rs  extract.rs  generate.rs  main.rs  service.rs
src/gemini-tools/tests/: basic_test.rs
src/graph-tools/: Cargo.toml
src/graph-tools/src/: canvas.rs  export.rs  lib.rs  service.rs
src/graph-tools/tests/: basic_test.rs
src/ocr-service/: Cargo.toml  build.rs
src/ocr-service/proto/: ocr.proto
src/ocr-service/src/: config.rs  lib.rs  main.rs  metrics.rs  ocr.rs  parallel.rs  pipeline.rs  server.rs  service.rs
src/ocr-service/tests/: ocr_service_test.rs
src/rag/: Cargo.toml
src/rag/src/: lib.rs  main.rs
src/rag/src/embeddings/: mod.rs
src/services/streaming/: Cargo.toml  Dockerfile
src/tools/cloud-tools/: Cargo.toml
src/tools/cloud-tools/src/: download.rs  models.rs  upload.rs
src/tools/vault-tools/: Cargo.toml
src/tools/vault-tools/src/: link.rs  read.rs  service.rs  write.rs
src/tools/vault-tools/tests/: basic_test.rs
src/vector-tools/: Cargo.toml  schema.sql
src/vector-tools/src/: client.rs  error.rs  main.rs  models.rs  search.rs
store/: messages.db
tests/: ocr.hurl
tests/integration/: Cargo.toml  cloud_test.rs  gemini_test.rs  graph_test.rs  messaging.test.ts  vault_test.rs  vector_test.rs
tests/integration/common/: mod.rs
whiteboards/: 69ad15f7-f13a-4833-90e9-0c47bbe84b35.edn
(+450 files in other folders)
