[workspace]
members = [
    "src/api",
    "src/ocr",
    "src/rag",
    "src/tools/gemini-tools",
    "src/tools/vector-tools",
    "src/tools/vault-tools",
    "src/tools/cloud-tools",
    "src/tools/graph-tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BAC Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bac-unified/bac"

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
urlencoding = "2.1"
unpdf = "0.2"
tantivy = "0.22"
bm25 = "0.2"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"

# Testing

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
