[package]
name = "graph-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Knowledge graph tool crate"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.11"
urlencoding = "2.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "graph-tools"
path = "src/main.rs"
