[package]
name = "bac-ocr-service"
version = "0.1.0"
edition = "2021"
description = "High-performance OCR service for BAC Unified"

[dependencies]
# OCR - using CLI tools (tesseract, surya)
pdf = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Parallel processing
rayon = "1.8"

# Channels
flume = "0.11"

# gRPC
prost = "0.13"
tonic = "0.12"

# Metrics
prometheus = "0.13"
metrics = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Image processing
image = "0.25"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
num_cpus = "1"

# HTTP server
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }

# Base64 encoding
base64 = "0.22"

# Multipart
mime = "0.3"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[[test]]
name = "ocr_service_test"
path = "tests/ocr_service_test.rs"

[[bin]]
name = "ocr-service"
path = "src/main.rs"
