[package]
name = "bac-rag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RAG pipeline with BM25 + vector hybrid search"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { workspace = true, features = ["macros"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
urlencoding.workspace = true
tantivy.workspace = true
bm25.workspace = true
clap.workspace = true
walkdir.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "bac-rag"
path = "src/main.rs"
