[package]
name = "vector-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "pgvector operations tool crate with HNSW index support"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait.workspace = true
parking_lot.workspace = true

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }

# pgvector support
pgvector = { version = "0.4", features = ["postgres", "serde"] }

# Configuration
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vector-tools"
path = "src/main.rs"
