[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Integration tests for all tool crates"

[dependencies]
# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
# Test utilities
once_cell = "1.19"

[[test]]
name = "gemini_test"
path = "gemini_test.rs"

[[test]]
name = "vector_test"
path = "vector_test.rs"

[[test]]
name = "vault_test"
path = "vault_test.rs"

[[test]]
name = "cloud_test"
path = "cloud_test.rs"

[[test]]
name = "graph_test"
path = "graph_test.rs"
