[package]
name = "vault-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Obsidian vault operations tool crate"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
dirs = "5.0"

# Obsidian format support
serde_yaml = "0.9"
walkdir = "2.5"
regex = "1.11"
once_cell = "1.20"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vault-tools"
path = "src/main.rs"
